# ezmsg-xdf

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-publish.yml  python-tests.yml
docs/scripts_nbs/: example_xdf_system.py
docs/source/: conf.py  index.rst
docs/source/api/: index.rst
src/ezmsg/xdf/: iter.py  source.py
tests/: test_iter.py
