[project]
name = "ezmsg-xdf"
description = "Namespace package for ezmsg to load iterate data from xdf files"
readme = "README.md"
authors = [
    { name = "Chadwick Boulay", email = "chadwick.boulay@gmail.com" }
]
requires-python = ">=3.9"
dynamic = ["version"]
dependencies = [
    "ezmsg>=3.6.0",
    "numpy>=2.0.2",
    "pyxdf>=1.16.8",
]

[dependency-groups]
dev = [
    {include-group = "lint"},
    {include-group = "test"},
    "typer>=0.12.5",
]
lint = [
    "ruff>=0.12.9",
]
test = [
    "pytest>=8.3.3",
]
docs = [
  "sphinx>=7.0",
  "sphinx-autodoc-typehints",
  "sphinx-copybutton",
  "pydata-sphinx-theme",
  "myst-parser",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/ezmsg/xdf/__version__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/ezmsg"]
